--- a/Develop/index.html
+++ b/Develop/index.html
@@ -27,21 +27,21 @@
     <div class="main-ad-picture"></div>
     <div class="left-side-padding">
         <div class="descriptions">
-            <img class="float-left" src="./assets/images/search-engine-optimization.jpg"/>
+            <img class="float-left" src="./assets/images/search-engine-optimization.jpg" alt="computer, coffee, SEO notebook and pens"/>
             <h2>Search Engine Optimization</h2>
             <p>
                 The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
             </p>
         </div>
         <div class="descriptions">
-            <img class="float-right" src="./assets/images/online-reputation-management.jpg"/>
+            <img class="float-right" src="./assets/images/online-reputation-management.jpg" alt="computer with word reputation displayed on screen"/>
             <h2>Online Reputation Management</h2>
             <p>
                 The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
             </p>
         </div>
         <div class="descriptions">
-            <img class="float-left" src="./assets/images/social-media-marketing.jpg"/>
+            <img class="float-left" src="./assets/images/social-media-marketing.jpg" alt="people surrounded by social media icons and computers at desk"/>
             <h2>Social Media Marketing</h2>
             <p>
                 Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
@@ -51,21 +51,21 @@
     <div class="benefits">
         <div class="benefit-lead">
             <h3>Lead Generation</h3>
-            <img src="./assets/images/lead-generation.png"/>
+            <img src="./assets/images/lead-generation.png" alt="funnel that has wheel going in, and $ coming out"/>
             <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
             </p>
         </div>
         <div class="benefit-brand">
             <h3>Brand Awareness</h3>
-            <img src="./assets/images/brand-awareness.png"/>
+            <img src="./assets/images/brand-awareness.png" alt="shirt and tie with shining lightbulb on top"/>
             <p>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
             </p>
         </div>
         <div class="benefit-cost">
             <h3>Cost Management</h3>
-            <img src="./assets/images/cost-management.png"></img>
+            <img src="./assets/images/cost-management.png" alt="wheel with $ signs"></img>
             <p>
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
             </p>
